Fix spacing on contact and home

--- a/src/styling/home.css
+++ b/src/styling/home.css
@@ -53,7 +53,7 @@
   .value {
     font-size: 2.5rem;
     font-weight: 400;     
-    padding: 1.1rem;
+    padding: 1rem;
     margin: 0;
   }
 
